updated linter config

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -9,7 +9,6 @@
     "build/**",
     "dist/**",
     "**/reset*.css",
-    "**/bootstrap*.css",
-    "node_module/**"
+    "**/bootstrap*.css"
   ]
 }
