--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -45,4 +45,4 @@ jobs:
           npm install --save-dev stylelint@13.3.x stylelint-scss@3.17.x stylelint-config-standard@20.0.x
           [ -f .stylelintrc.json ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/html-css/.stylelintrc.json
       - name: Stylelint Report
-        run: "**/*.scss"
+        run: npx stylelint "**/*.scss"
